# Countdown-With-Intention

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: main.yml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.afdesign  icon.icns
